--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,6 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base",
-    "github>sai-bukka/renovate-presets"
+    "github>sai-bukka/renovate-presets:base-image"
   ]
 }
